[package]
name = "rkr-gst"
description = "Implementation of Running Karp-Rabin Greedy String Tiling algorithm"
version = "0.1.0"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adler32 = "1.2.0"
bitvec = "0.17.4"
