[package]
name = "rkr-gst"
description = "Implementation of Running Karp-Rabin Greedy String Tiling algorithm"
license = "MIT"
homepage = "https://github.com/jiegec/rkr-gst"
version = "0.1.2"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adler32 = "1.2.0"
bitvec = "1.0.1"
